examples/core/errors/type_errors/05_constructor.output.txt

error[E0102]: Undefined variable
  ┌─ input:6:1
3 │ // Note: Constructors must be defined in the type context
4 │ // This example shows valid constructor syntax using Church encoding
5 │ // since full ADT support requires a prelude/type definition system
6 │ let some = x -> #Some(x) in
    ^^^
7 │ some(42)
8 │ 
  = note: Variable at index 0 is not defined in this scope
  = note: Variables must be defined before they are used, typically in a let binding or lambda parameter
  = hint: Check variable name and scope
  = hint: Did you forget to define this variable?
  = hint: Check for typos in the variable name

